--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass": "^1.77.8",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.9",
-    "wowjs": "^1.1.3"
+    "wowjs": "^1.1.3",
+    "yet-another-react-lightbox": "^3.22.0"
   }
 }
